--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,49 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
-.home{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-    min-height: 100vh;
-    align-items: center;
-    /* background:url(../images/home-bg.jpg) no-repeat; */
-    background-size: cover;
-    background-position: center;
-  }
-  .home .content{
-    flex:1 1 40rem;
-    /* padding-top: 6.5rem; */
-  }
-  
-  .home .image{
-    flex:1 1 40rem;
-  }
-  
-  .home .image img{
-    width:100%;
-    padding:1rem;
-    animation:float 3s linear infinite;
+.home {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  min-height: 80vh;
+  align-items: center;
+  background: url(../../../images/home-bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.home .content {
+  flex: 1 1 40rem;
+  padding-top: 6.5rem;
+}
+
+.home .image {
+  flex: 1 1 40rem;
+}
+
+.home .image img {
+  width: 100%;
+  padding: 1rem;
+  animation: float 3s linear infinite;
+}
+
+@keyframes float {
+
+  0%,
+  100% {
+    transform: translateY(0rem);
   }
 
-  @keyframes float{
-    0%, 100%{
-      transform: translateY(0rem);
-    }
-    50%{
-      transform: translateY(3rem);
-    }
+  50% {
+    transform: translateY(3rem);
   }
-  
-  .home .content h3{
-    font-size: 3rem; 
-    color:#333;
-  }
-  
-  .home .content p{
-    /* font-size: 1.7rem; */
-    color:#666;
-    padding:1rem 0;
-  }
-  /* .btn{
+}
+
+.home .content h3 {
+  font-size: 3rem;
+  color: #333;
+}
+
+.home .content p {
+  font-size: 1.7rem;
+  color: #666;
+  padding: 1rem 0;
+}
+
+section {
+  padding: 2rem 2%;
+}
+
+/* .btn{
     display: inline-block;
     padding:.8rem 3rem;
     border:.2rem solid var(--red);
@@ -76,7 +84,3 @@
   .btn:hover{
     color:#fff;
   } */
-  section{
-    padding:2rem 2%;
-  }
-
